--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -335,7 +335,7 @@ function speakText(text, voice, buttonElement) {
 }
 
         function checkCompletion() {
-    const allCardsInteracted = interactedCards.every(interacted => interacted);
+    const allCardsInteracted = interactedCards.every(interacted => interacted); // Verifica se todos os cards foram interagidos
     console.log(`Interações: ${interactedCards}`);
     console.log(`Áudios reproduzidos: ${soundPlayed}, Total de cartões: ${totalCards}`);
 
