--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -268,19 +268,31 @@
         playSoundIcon.classList.add('play-sound');
         playSoundIcon.src = 'businessman.png';
         playSoundIcon.alt = "Play Sound";
-        playSoundIcon.onclick = (event) => {
+       // Adicione esta lógica na função de evento onclick do botão playSoundIcon
+playSoundIcon.onclick = (event) => {
     event.stopPropagation();
 
-    // Incrementa o contador apenas uma vez por card
+    // Incrementa o contador de som apenas se o som ainda não foi reproduzido
     if (!interactedCards[index]) {
-        soundPlayed++; // Incrementa apenas na primeira interação
-        interactedCards[index] = true; // Marca como interagido
+        soundPlayed++;
+        interactedCards[index] = true; // Marca como interagido após o áudio ser reproduzido
         console.log(`Áudio reproduzido para o card ${index + 1}. Total de áudios: ${soundPlayed}`);
     }
 
     toggleSpeech(word, playSoundIcon, index);
     checkCompletion(); // Verifica a conclusão após a reprodução do som
 };
+
+// No evento de clique no cartão:
+card.addEventListener('click', function () {
+    card.classList.toggle('rotated');
+
+    // Marca o cartão como interagido, mas mantém a contagem de som separada
+    interactedCards[index] = true;
+    console.log(`Card ${index + 1} virado. Estado de interação: ${interactedCards}`);
+
+    checkCompletion(); // Verifica a conclusão após virar o cartão
+});
 
         cardInner.appendChild(cardFront);
         cardInner.appendChild(cardBack);
