--- a/Atividades/Fill in the Blanks/index.html
+++ b/Atividades/Fill in the Blanks/index.html
@@ -274,7 +274,7 @@
         return;
     }
 
-    const questionsPath = `../../${level}/${unit}/DataFillintheBlanks/questions.txt`; // Caminho dinâmico para as questões
+    const questionsPath = `../../Level1/${level}/Unit${unit}/DataFillintheBlanks/questions.txt`;
     console.log("Generated Path:", questionsPath);
 
     try {
