--- a/Atividades/Fill in the Blanks/index.html
+++ b/Atividades/Fill in the Blanks/index.html
@@ -269,12 +269,14 @@
     console.log("Level:", level);
     console.log("Unit:", unit);
 
+    // Verifica se os parâmetros level e unit estão presentes na URL
     if (!level || !unit) {
         alert("Level or Unit not identified in the URL.");
         return;
     }
 
-    const questionsPath = `../../Level1/${level}/Unit${unit}/DataFillintheBlanks/questions.txt`;
+    // Caminho correto para acessar o arquivo questions.txt com base na URL
+    const questionsPath = `../../${level}/${unit}/DataFillintheBlanks/questions.txt`;
     console.log("Generated Path:", questionsPath);
 
     try {
@@ -463,12 +465,12 @@
             return params.get('fase');
         }
 
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname.split('/');
-            const level = url[1];
-            const unit = url[2];
-            return { level, unit };
-        }
+       function getLevelAndUnitFromURL() {
+    const urlParams = new URLSearchParams(window.location.search); // Pega os parâmetros da query string
+    const level = urlParams.get('level'); // Extrai o parâmetro 'level'
+    const unit = urlParams.get('unit');  // Extrai o parâmetro 'unit'
+    return { level, unit };
+}
       
 function readText() {
     synth.cancel(); // Cancela qualquer leitura em andamento
