--- a/Atividades/Fill in the Blanks/index - Copy.html
+++ b/Atividades/Fill in the Blanks/index - Copy.html
@@ -263,7 +263,6 @@
         let synth = window.speechSynthesis;
         let userAnswers = {}; // Objeto para armazenar as respostas do usuário
         let alertDisplayed = false; // Nova variável para controlar exibição de alertas
-        let phaseCompleted = false; // Variável para controlar se a fase foi completada
 
         async function loadQuestions() {
     const { level, unit } = getLevelAndUnitFromURL(); // Obtém o nível e unidade da URL
@@ -376,10 +375,16 @@
     const blanks = document.querySelectorAll('.blank');
     let allCorrect = true;
 
+    // Inicializa o armazenamento das respostas da questão atual
+    if (!userAnswers[currentQuestion]) {
+        userAnswers[currentQuestion] = [];
+    }
+
     blanks.forEach((blank, index) => {
         const userAnswer = blank.textContent.trim();
         const correctAnswer = correctAnswers[currentQuestion - 1][index];
 
+        // Salva a resposta do aluno
         userAnswers[currentQuestion][index] = userAnswer;
 
         if (userAnswer === correctAnswer) {
@@ -404,8 +409,6 @@
             document.getElementById('successContainer').style.display = 'none';
             nextQuestion();
         }, 5000);
-
-        markPhaseAsCompleted(); // Marca a fase como completada
     }
 }
 
@@ -613,22 +616,6 @@ async function checkPhaseProgress(uid, level, unit) {
         return false; // Retorna false em caso de erro
     }
 }
-
-// Função para marcar a fase como completada
-function markPhaseAsCompleted() {
-    phaseCompleted = true; // Marca a fase como completada
-}
-
-// Detecta a tentativa de sair da página
-window.addEventListener("beforeunload", function (event) {
-    if (!phaseCompleted) { // Verifica se a fase não foi completada
-        const message = "You have not completed this phase. Are you sure you want to leave?";
-        
-        // Bloqueia a navegação e exibe a mensagem de confirmação
-        event.returnValue = message; // Para navegadores modernos
-        return message; // Para alguns navegadores mais antigos
-    }
-});
 
         function previousQuestion() {
             if (currentQuestion > 1) {
