--- a/Atividades/Fill in the Blanks/index.html
+++ b/Atividades/Fill in the Blanks/index.html
@@ -603,7 +603,7 @@ async function checkPhaseProgress(uid, level, unit) {
         // Acessa o banco de dados para verificar o status da próxima fase
         const dbRef = firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}/${nextPhase}`);
         const snapshot = await dbRef.once("value");
-        
+
         const isUnlocked = snapshot.val() === true; // Verifica se a próxima fase está desbloqueada
         console.log(`Next phase (${nextPhase}) unlocked:`, isUnlocked);
 
@@ -623,16 +623,13 @@ window.addEventListener("beforeunload", async function (event) {
         return;
     }
 
-    // Verifica o status de autenticação do usuário
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
-            const uid = user.uid; // Obtém o UID do usuário autenticado
+            const uid = user.uid;
 
-            // Verifica se a próxima fase está desbloqueada
             const isNextPhaseUnlocked = await checkPhaseProgress(uid, level, unit);
 
             if (!isNextPhaseUnlocked) {
-                // Verifica se a fase não foi completada
                 const message = "You have not completed this phase. Are you sure you want to leave?";
                 event.returnValue = message; // Para navegadores modernos
                 return message; // Para navegadores mais antigos
