--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -176,6 +176,7 @@
 
     let totalAnswers = 0;
     let clickedAnswers = 0;
+    let alertDisplayed = false;
 
     function loadTextFile() {
         fetch('texto.txt')
@@ -210,17 +211,83 @@
             .catch(error => console.error('Error loading the text file:', error));
     }
 
-    function handleAnswerClick(button) {
-        const answerElement = button.nextElementSibling;
-        if (answerElement.style.display === 'none') {
-            answerElement.style.display = 'inline';
-            clickedAnswers++;
+    // Inicializar a variável de controle para o alerta
+let alertDisplayed = false;
 
-            if (clickedAnswers === totalAnswers) {
-                markActivityAsCompleted();
+// Função que gerencia a leitura das respostas
+function handleAnswerClick(button) {
+    const answerElement = button.nextElementSibling;
+    if (answerElement.style.display === 'none') {
+        answerElement.style.display = 'inline';
+        clickedAnswers++;
+
+        // Se todas as respostas foram clicadas, marca a atividade como concluída
+        if (clickedAnswers === totalAnswers) {
+            markActivityAsCompleted();
+        }
+
+        // Chama a função para ler o texto em voz alta
+        readText(answerElement.innerText);
+    }
+}
+
+// Função de leitura de texto
+function readText(text) {
+    if (!window.speechSynthesis) {
+        console.error("Sintetizador de fala não suportado neste navegador.");
+        return;
+    }
+
+    const synth = window.speechSynthesis;
+    synth.cancel(); // Cancela qualquer síntese de voz anterior
+
+    // Obtém todas as vozes disponíveis
+    let voices = synth.getVoices();
+
+    // Função que tenta encontrar a voz en-US
+    function findVoice() {
+        let enUSVoice = voices.find(voice => voice.lang === 'en-US');
+        
+        if (!enUSVoice) {
+            // Se a voz en-US não estiver disponível
+            if (voices.length === 0) {
+                // Aguardando as vozes serem carregadas
+                window.speechSynthesis.onvoiceschanged = function() {
+                    voices = synth.getVoices();
+                    enUSVoice = voices.find(voice => voice.lang === 'en-US');
+                    if (enUSVoice) {
+                        speakText(text, enUSVoice);
+                    } else {
+                        showAlert("No 'en-US' voice found. Using default voice instead.");
+                    }
+                };
+            } else {
+                showAlert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
+                speakText(text, synth.getVoices()[0]); // Usa a voz padrão se en-US não estiver disponível
             }
+        } else {
+            speakText(text, enUSVoice);
         }
     }
+
+    // Função para falar o texto com a voz selecionada
+    function speakText(text, voice) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        utterance.voice = voice;
+        synth.speak(utterance);
+    }
+
+    // Exibe um alerta se necessário
+    function showAlert(message) {
+        if (!alertDisplayed) {
+            alert(message);
+            alertDisplayed = true;
+        }
+    }
+
+    // Verifica a disponibilidade das vozes
+    findVoice();
+}
 
     function markActivityAsCompleted() {
         console.log("Atividade concluída!");
