--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -179,7 +179,8 @@
     let alertDisplayed = false;
 
     function loadTextFile() {
-        fetch('texto.txt')
+        const { level, unit } = getLevelAndUnitFromURL();
+        fetch(`../../${level}/${unit}/DataGrammar/texto.txt`)
             .then(response => response.text())
             .then(data => {
                 const contentDiv = document.getElementById('content');
@@ -211,7 +212,6 @@
             .catch(error => console.error('Error loading the text file:', error));
     }
 
-    // Função que gerencia a leitura das respostas
     function handleAnswerClick(button) {
         const answerElement = button.nextElementSibling;
         if (answerElement.style.display === 'none') {
@@ -228,7 +228,6 @@
         }
     }
 
-    // Função de leitura de texto
     function readText(text) {
         if (!window.speechSynthesis) {
             console.error("Sintetizador de fala não suportado neste navegador.");
@@ -238,17 +237,13 @@
         const synth = window.speechSynthesis;
         synth.cancel(); // Cancela qualquer síntese de voz anterior
 
-        // Obtém todas as vozes disponíveis
         let voices = synth.getVoices();
 
-        // Função que tenta encontrar a voz en-US
         function findVoice() {
             let enUSVoice = voices.find(voice => voice.lang === 'en-US');
             
             if (!enUSVoice) {
-                // Se a voz en-US não estiver disponível
                 if (voices.length === 0) {
-                    // Aguardando as vozes serem carregadas
                     window.speechSynthesis.onvoiceschanged = function() {
                         voices = synth.getVoices();
                         enUSVoice = voices.find(voice => voice.lang === 'en-US');
@@ -259,22 +254,20 @@
                         }
                     };
                 } else {
-                    showAlert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
-                    speakText(text, synth.getVoices()[0]); // Usa a voz padrão se en-US não estiver disponível
+                    showAlert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used.");
+                    speakText(text, synth.getVoices()[0]);
                 }
             } else {
                 speakText(text, enUSVoice);
             }
         }
 
-        // Função para falar o texto com a voz selecionada
         function speakText(text, voice) {
             const utterance = new SpeechSynthesisUtterance(text);
             utterance.voice = voice;
             synth.speak(utterance);
         }
 
-        // Exibe um alerta se necessário
         function showAlert(message) {
             if (!alertDisplayed) {
                 alert(message);
@@ -282,7 +275,6 @@
             }
         }
 
-        // Verifica a disponibilidade das vozes
         findVoice();
     }
 
@@ -335,7 +327,7 @@
     }
 
     function generatePDF() {
-        fetch('texto.txt')
+        fetch(`../../${getLevelAndUnitFromURL().level}/${getLevelAndUnitFromURL().unit}/DataGrammar/texto.txt`)
             .then(response => response.text())
             .then(data => {
                 const { jsPDF } = window.jspdf;
